# ppk2-python

./: .gitignore  LICENSE  README.md  action.yml  action_report.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: generate_reports.py
src/ppk2/: __init__.py  ai.py  cli.py  client.py  commands.py  conversion.py  daemon.py  desktop.py  device.py  events.py  mock.py  parser.py  ppk2file.py  report.py  synthetic.py  transport.py  types.py
src/ppk2/themes/: __init__.py  dark.css  layout.css  light.css
tests/: test_ai.py  test_commands.py  test_conversion.py  test_daemon.py  test_device.py  test_events.py  test_integration.py  test_parser.py  test_ppk2file.py  test_report.py  test_synthetic.py  test_types.py
