[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppk2-python"
dynamic = ["version"]
description = "Python library for Nordic Power Profiler Kit II (PPK2)"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Matthew McGowan"},
]
keywords = ["ppk2", "power-profiling", "nordic", "embedded", "iot", "measurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "pyserial>=3.5",
]

[project.urls]
Repository = "https://github.com/m-mcgowan/ppk2-python"
"Bug Tracker" = "https://github.com/m-mcgowan/ppk2-python/issues"

[project.scripts]
ppk2 = "ppk2.cli:main"

[project.optional-dependencies]
report = [
    "plotly>=5.0",
]
desktop = [
    "playwright>=1.40",
]
ai = [
    "anthropic>=0.30",
]
all = [
    "plotly>=5.0",
    "playwright>=1.40",
    "anthropic>=0.30",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "plotly>=5.0",
    "playwright>=1.40",
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
